--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   google_fonts: ^3.0.1
   firebase_core: ^2.4.0
   firebase_auth: ^4.2.1
+  auto_size_text: ^3.0.0
   cupertino_icons: ^1.0.2
   animated_text_kit: ^4.2.2
   firebase_analytics: ^10.0.7
