--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   rive: ^0.9.1
+  uuid: ^3.0.7
   intl: ^0.17.0
   provider: ^6.0.4
   go_router: ^5.2.4
@@ -20,15 +21,20 @@ dependencies:
   firebase_auth: ^4.2.1
   auto_size_text: ^3.0.0
   cupertino_icons: ^1.0.2
+  json_serializable: ^6.5.4
   animated_text_kit: ^4.2.2
+  firebase_database: ^10.0.8
   firebase_analytics: ^10.0.7
   shared_preferences: ^2.0.15
   flutter_colorpicker: ^1.0.3
+  flutter_svg_provider: ^1.0.3
   firebase_crashlytics: ^3.0.7
+  flutter_keyboard_visibility: ^5.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.3.3
   flutter_lints: ^2.0.0
   change_app_package_name: ^1.1.0
 flutter:
@@ -40,3 +46,4 @@ flutter:
         - asset: assets/fonts/Righteous-Regular.ttf
   assets:
     - assets/rive/
+    - assets/image/
