--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_auth: ^4.2.1
   auto_size_text: ^3.0.0
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^4.3.1
   json_serializable: ^6.5.4
   animated_text_kit: ^4.2.2
   firebase_database: ^10.0.8
