--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_svg_provider: ^1.0.3
   firebase_crashlytics: ^3.0.7
   flutter_keyboard_visibility: ^5.4.0
+  cloud_functions: ^4.0.7
 
 dev_dependencies:
   flutter_test:
