--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_crashlytics: ^3.0.7
   flutter_keyboard_visibility: ^5.4.0
   cloud_functions: ^4.0.7
+  firebase_messaging: ^14.2.0
 
 dev_dependencies:
   flutter_test:
