--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dev_dependencies:
   build_runner: ^2.3.3
   flutter_lints: ^2.0.0
   change_app_package_name: ^1.1.0
+  flutter_launcher_icons: ^0.11.0
 flutter:
   generate: true
   uses-material-design: true
@@ -50,3 +51,22 @@ flutter:
   assets:
     - assets/rive/
     - assets/image/
+    - assets/icon/
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/message_icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/icon/message_icon.jpg"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/icon/message_icon.jpg"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/icon/message_icon.jpg"
