--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,22 +17,25 @@ dependencies:
   go_router: ^5.2.4
   flutter_svg: ^1.1.6
   google_fonts: ^3.0.1
+  image_cropper: ^3.0.1
   firebase_core: ^2.4.0
   firebase_auth: ^4.2.1
+  image_picker: ^0.8.6+1
   auto_size_text: ^3.0.0
   cupertino_icons: ^1.0.2
+  cloud_functions: ^4.0.7
   cloud_firestore: ^4.3.1
   json_serializable: ^6.5.4
   animated_text_kit: ^4.2.2
+  firebase_storage: ^11.0.10
   firebase_database: ^10.0.8
+  firebase_messaging: ^14.2.0
   firebase_analytics: ^10.0.7
   shared_preferences: ^2.0.15
   flutter_colorpicker: ^1.0.3
   flutter_svg_provider: ^1.0.3
   firebase_crashlytics: ^3.0.7
   flutter_keyboard_visibility: ^5.4.0
-  cloud_functions: ^4.0.7
-  firebase_messaging: ^14.2.0
 
 dev_dependencies:
   flutter_test:
