--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -25,5 +25,5 @@ jobs:
           cache: true
       - name: Get dependencies
         run: flutter pub get
-      - name: Start release build
-        run: flutter build apk
+      - name: Start Testing
+        run: flutter test
